@@ -46,6 +46,13 @@ binary-indep: build
           $(tmp)/usr/share/doc-base $(tmp)/usr/share/doc/doc-debian
 	install -m 644 debian-faq.en.txt.gz debian-faq.en.ps.gz \
                     debian-faq.en.pdf.gz debian-faq.en.html/* $(docdir)/FAQ
+
+	for l in de it; do \
+          install -m 644 $l/debian-faq.$l.txt.gz $l/debian-faq.$l.ps.gz \
+           $l/debian-faq.$l.pdf.gz $(docdir)/FAQ; \
+          install -m 644 debian-faq.$l.html/* $(docdir)/FAQ/$l/; \
+        done
+
 	cd $(docdir)/FAQ && for file in *.en.html; do \
           ln -s $$file $${file%$${file#$${file%.en.html}}}.html; \
         done
