@@ -15,6 +15,7 @@ debian-faq (3.1.6) UNRELEASED; urgency=high
   * debian/rules: faq no longer is in FAQ/, but in .: adjust build rules.
   * debian/doc-base: imported from doc-debian-3.1.5/doc-base/debian-faq.
     updated list of authors.
+  * debian/rules: try to install de and it translations too CHECKME/FIXME.
   * Update the content of the FAQ files to their latest SVN
     versions, from svn.debian.org ddp/manuals/faq:
      - changes by joostvb, 2008-03-24 - 2008-03-29
